web-infras/parser/tests/fixtures/babel/es2015/modules/duplicate-named-export-destructuring14/output.txt
[SyntaxError]: 'import' and 'export' may appear only with 'sourceType: "module"' (1,1)
1|export const foo = 1;
 |^
[SyntaxError]: 'import' and 'export' may appear only with 'sourceType: "module"' (2,1)
2|export const { foo2: foo } = bar;
 |^
[SyntaxError]: Identifier has already been declared. (2,22)
2|export const { foo2: foo } = bar;
 |                    ^
[SyntaxError]: Identifier has already been declared. (2,22)
2|export const { foo2: foo } = bar;
 |                    ^
